--- a/sketch.html
+++ b/sketch.html
@@ -14,6 +14,7 @@
 		
 		<script src="http://threejsplaygnd.brangerbriz.net/js/three.min.js"></script>
 		<script src="http://threejsplaygnd.brangerbriz.net/js/Detector.js"></script>
+		<script src="http://brangerbriz.net/labs/threejs_playGnd/js/AsciiEffect.js"></script>
 		<script>
 
 			if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
@@ -26,8 +27,11 @@
 				var W = window.innerWidth, H = window.innerHeight;
 				renderer = new THREE.WebGLRenderer( { preserveDrawingBuffer: true } );
 				renderer.autoClearColor = false;
-				renderer.setSize( W, H );
-				document.body.appendChild( renderer.domElement );
+				//renderer.setSize( W, H );
+				//document.body.appendChild( renderer.domElement );
+				effect = new THREE.AsciiEffect( renderer );
+				effect.setSize(W, H);
+				document.body.appendChild( effect.domElement );
 
 				camera = new THREE.PerspectiveCamera( 50, W/H, 1, 10000 );
 				camera.position.z = 500;
@@ -50,7 +54,7 @@
 				var s = Math.sin( Date.now() * 0.002 );
 				mesh.material.color.setHSL(0.5, s, 0.5 );
 
-				renderer.render( scene, camera );
+				effect.render( scene, camera );
 
 				mesh.position.x = Math.sin( Date.now() * 0.001 ) * 50;  
 				mesh.rotation.z = Date.now() * 0.0005;
