--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h5>Hello World!</h5>
 	<h6>Hello World!</h6>
 	<p>This is a paragraph. My name is Leily!</p>
-	<iframe src="sketch.html"></iframe>
+	<aframe src="sketch.html"></aframe>
 
 </body>
 </html>
