--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h4>Hello World!</h4>
 	<h5>Hello World!</h5>
 	<h6>Hello World!</h6>
-	<p>This is a paragraph. My name is Leily!</p>
+	<p>This is a paragraph. My name is Sumedh!</p>
 	<aframe src="sketch.html"></aframe>
 
 </body>
