--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<h5>Hello World!</h5>
 	<h6>Hello World!</h6>
 	<p>This is a paragraph. My name is Sumedh!</p>
-	<aframe src="sketch.html"></aframe>
+
+	<iframe src="sketch.html"></iframe>
 
 </body>
 </html>
